test/grammar/datatype/units/invalid_units_fail_0/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:1:6
  |
1 | mi = 1mi
  |      ^ invalid int binary suffix
  |